# Anime-Downloader

./: .gitignore  Cargo.toml  README.md  action.yml
.github/workflows/: release.yml
src/: config.rs  download.rs  main.rs
