[package]
name = "anime_downloader"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "*"
serde = { version = "1.0.195", features = ["derive"] }
toml = "*"

[dependencies.ytd-rs]
version = "0.1.7"
features = ["yt-dlp"]
