[package]
name = "anime_downloader"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
indicatif = "*"
serde = { version = "1.0.195", features = ["derive"] }
toml = "*"
open = "*"
winapi = "*"

[dependencies.ytd-rs]
version = "0.1.7"
features = ["yt-dlp"]
